# models/user_register.go
@@ -1,0 +1,6 @@
+package models
+
+type UserRegister struct {
+	PhoneNumber string `json:"phone_number"`
+	Password    string `json:"password"`
+}
